parser.output
   0  $accept : %entry% $end

   1  program : decls EOF

   2  decls :
   3        | decls cdecl

   4  cdecl : CLASS ID extends LBRACE cbodydecls RBRACE

   5  cbodydecls :
   6             | cbodydecls ivdecl
   7             | cbodydecls mdecl

   8  mdecl : invert typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE

   9  extends :
  10          | EXTENDS ID

  11  formals_opt :
  12              | formal_list

  13  formal_list : typ ID
  14              | formal_list COMMA typ ID

  15  typ : INT
  16      | BOOL
  17      | FLOAT
  18      | VOID
  19      | STR
  20      | ID

  21  vdecl_list :
  22             | vdecl_list vdecl

  23  vdecl : typ ID SEMI

  24  ivdecl : invert typ ID SEMI

  25  invert :
  26         | INVERT

  27  stmt_list : stmt
  28            | stmt_list stmt

  29  stmt : expr SEMI
  30       | RETURN expr_opt SEMI
  31       | empty_statement
  32       | LBRACE stmt_list RBRACE
  33       | IF LPAREN expr RPAREN stmt
  34       | IF LPAREN expr RPAREN stmt ELSE stmt
  35       | FOR LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt
  36       | WHILE LPAREN expr RPAREN stmt

  37  empty_statement : SEMI

  38  expr_opt :
  39           | expr

  40  expr : LITERAL
  41       | FLIT
  42       | BLIT
  43       | SLIT
  44       | ID
  45       | expr PLUS expr
  46       | expr MINUS expr
  47       | expr TIMES expr
  48       | expr DIVIDE expr
  49       | expr EQ expr
  50       | expr NEQ expr
  51       | expr LT expr
  52       | expr LEQ expr
  53       | expr GT expr
  54       | expr GEQ expr
  55       | expr AND expr
  56       | expr OR expr
  57       | MINUS expr
  58       | NOT expr
  59       | ID ASSIGN expr
  60       | ID LPAREN args_opt RPAREN
  61       | ID DOT ID LPAREN args_opt RPAREN
  62       | ID DOT ID
  63       | NEW ID LPAREN args_opt RPAREN
  64       | SUPER LPAREN args_opt RPAREN
  65       | THIS DOT ID
  66       | THIS DOT ID ASSIGN expr
  67       | THIS DOT ID LPAREN args_opt RPAREN
  68       | LPAREN expr RPAREN

  69  args_opt :
  70           | args_list

  71  args_list : expr
  72            | args_list COMMA expr

  73  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (73)
	decls : .  (2)

	.  reduce 2

	program  goto 3
	decls  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (73)

	.  reduce 73


state 4
	program : decls . EOF  (1)
	decls : decls . cdecl  (3)

	CLASS  shift 5
	EOF  shift 6
	.  error

	cdecl  goto 7


state 5
	cdecl : CLASS . ID extends LBRACE cbodydecls RBRACE  (4)

	ID  shift 8
	.  error


state 6
	program : decls EOF .  (1)

	.  reduce 1


state 7
	decls : decls cdecl .  (3)

	.  reduce 3


state 8
	cdecl : CLASS ID . extends LBRACE cbodydecls RBRACE  (4)
	extends : .  (9)

	EXTENDS  shift 9
	LBRACE  reduce 9

	extends  goto 10


state 9
	extends : EXTENDS . ID  (10)

	ID  shift 11
	.  error


state 10
	cdecl : CLASS ID extends . LBRACE cbodydecls RBRACE  (4)

	LBRACE  shift 12
	.  error


state 11
	extends : EXTENDS ID .  (10)

	.  reduce 10


state 12
	cdecl : CLASS ID extends LBRACE . cbodydecls RBRACE  (4)
	cbodydecls : .  (5)

	.  reduce 5

	cbodydecls  goto 13


state 13
	cdecl : CLASS ID extends LBRACE cbodydecls . RBRACE  (4)
	cbodydecls : cbodydecls . ivdecl  (6)
	cbodydecls : cbodydecls . mdecl  (7)
	invert : .  (25)

	RBRACE  shift 14
	INVERT  shift 15
	INT  reduce 25
	BOOL  reduce 25
	FLOAT  reduce 25
	VOID  reduce 25
	STR  reduce 25
	ID  reduce 25

	ivdecl  goto 16
	mdecl  goto 17
	invert  goto 18


state 14
	cdecl : CLASS ID extends LBRACE cbodydecls RBRACE .  (4)

	.  reduce 4


state 15
	invert : INVERT .  (26)

	.  reduce 26


state 16
	cbodydecls : cbodydecls ivdecl .  (6)

	.  reduce 6


state 17
	cbodydecls : cbodydecls mdecl .  (7)

	.  reduce 7


state 18
	mdecl : invert . typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (8)
	ivdecl : invert . typ ID SEMI  (24)

	INT  shift 19
	BOOL  shift 20
	FLOAT  shift 21
	VOID  shift 22
	STR  shift 23
	ID  shift 24
	.  error

	typ  goto 25


state 19
	typ : INT .  (15)

	.  reduce 15


state 20
	typ : BOOL .  (16)

	.  reduce 16


state 21
	typ : FLOAT .  (17)

	.  reduce 17


state 22
	typ : VOID .  (18)

	.  reduce 18


state 23
	typ : STR .  (19)

	.  reduce 19


state 24
	typ : ID .  (20)

	.  reduce 20


state 25
	mdecl : invert typ . ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (8)
	ivdecl : invert typ . ID SEMI  (24)

	ID  shift 26
	.  error


state 26
	mdecl : invert typ ID . LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (8)
	ivdecl : invert typ ID . SEMI  (24)

	SEMI  shift 27
	LPAREN  shift 28
	.  error


state 27
	ivdecl : invert typ ID SEMI .  (24)

	.  reduce 24


state 28
	mdecl : invert typ ID LPAREN . formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (8)
	formals_opt : .  (11)

	INT  shift 19
	BOOL  shift 20
	FLOAT  shift 21
	VOID  shift 22
	STR  shift 23
	ID  shift 24
	RPAREN  reduce 11

	typ  goto 29
	formals_opt  goto 30
	formal_list  goto 31


state 29
	formal_list : typ . ID  (13)

	ID  shift 32
	.  error


state 30
	mdecl : invert typ ID LPAREN formals_opt . RPAREN LBRACE vdecl_list stmt_list RBRACE  (8)

	RPAREN  shift 33
	.  error


state 31
	formals_opt : formal_list .  (12)
	formal_list : formal_list . COMMA typ ID  (14)

	COMMA  shift 34
	RPAREN  reduce 12


state 32
	formal_list : typ ID .  (13)

	.  reduce 13


state 33
	mdecl : invert typ ID LPAREN formals_opt RPAREN . LBRACE vdecl_list stmt_list RBRACE  (8)

	LBRACE  shift 35
	.  error


state 34
	formal_list : formal_list COMMA . typ ID  (14)

	INT  shift 19
	BOOL  shift 20
	FLOAT  shift 21
	VOID  shift 22
	STR  shift 23
	ID  shift 24
	.  error

	typ  goto 36


state 35
	mdecl : invert typ ID LPAREN formals_opt RPAREN LBRACE . vdecl_list stmt_list RBRACE  (8)
	vdecl_list : .  (21)

	.  reduce 21

	vdecl_list  goto 37


state 36
	formal_list : formal_list COMMA typ . ID  (14)

	ID  shift 38
	.  error


state 37
	mdecl : invert typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list . stmt_list RBRACE  (8)
	vdecl_list : vdecl_list . vdecl  (22)

	SEMI  shift 39
	LPAREN  shift 40
	LBRACE  shift 41
	MINUS  shift 42
	NOT  shift 43
	RETURN  shift 44
	IF  shift 45
	FOR  shift 46
	WHILE  shift 47
	INT  shift 19
	BOOL  shift 20
	FLOAT  shift 21
	VOID  shift 22
	STR  shift 23
	SUPER  shift 48
	THIS  shift 49
	NEW  shift 50
	LITERAL  shift 51
	BLIT  shift 52
	ID  shift 53
	FLIT  shift 54
	SLIT  shift 55
	.  error

	typ  goto 56
	stmt_list  goto 57
	vdecl  goto 58
	stmt  goto 59
	expr  goto 60
	empty_statement  goto 61


state 38
	formal_list : formal_list COMMA typ ID .  (14)

	.  reduce 14


state 39
	empty_statement : SEMI .  (37)

	.  reduce 37


state 40
	expr : LPAREN . expr RPAREN  (68)

	LPAREN  shift 40
	MINUS  shift 42
	NOT  shift 43
	SUPER  shift 48
	THIS  shift 49
	NEW  shift 50
	LITERAL  shift 51
	BLIT  shift 52
	ID  shift 62
	FLIT  shift 54
	SLIT  shift 55
	.  error

	expr  goto 63


state 41
	stmt : LBRACE . stmt_list RBRACE  (32)

	SEMI  shift 39
	LPAREN  shift 40
	LBRACE  shift 41
	MINUS  shift 42
	NOT  shift 43
	RETURN  shift 44
	IF  shift 45
	FOR  shift 46
	WHILE  shift 47
	SUPER  shift 48
	THIS  shift 49
	NEW  shift 50
	LITERAL  shift 51
	BLIT  shift 52
	ID  shift 62
	FLIT  shift 54
	SLIT  shift 55
	.  error

	stmt_list  goto 64
	stmt  goto 59
	expr  goto 60
	empty_statement  goto 61


state 42
	expr : MINUS . expr  (57)

	LPAREN  shift 40
	MINUS  shift 42
	NOT  shift 43
	SUPER  shift 48
	THIS  shift 49
	NEW  shift 50
	LITERAL  shift 51
	BLIT  shift 52
	ID  shift 62
	FLIT  shift 54
	SLIT  shift 55
	.  error

	expr  goto 65


state 43
	expr : NOT . expr  (58)

	LPAREN  shift 40
	MINUS  shift 42
	NOT  shift 43
	SUPER  shift 48
	THIS  shift 49
	NEW  shift 50
	LITERAL  shift 51
	BLIT  shift 52
	ID  shift 62
	FLIT  shift 54
	SLIT  shift 55
	.  error

	expr  goto 66


state 44
	stmt : RETURN . expr_opt SEMI  (30)
	expr_opt : .  (38)

	LPAREN  shift 40
	MINUS  shift 42
	NOT  shift 43
	SUPER  shift 48
	THIS  shift 49
	NEW  shift 50
	LITERAL  shift 51
	BLIT  shift 52
	ID  shift 62
	FLIT  shift 54
	SLIT  shift 55
	SEMI  reduce 38

	expr  goto 67
	expr_opt  goto 68


state 45
	stmt : IF . LPAREN expr RPAREN stmt  (33)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (34)

	LPAREN  shift 69
	.  error


state 46
	stmt : FOR . LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (35)

	LPAREN  shift 70
	.  error


state 47
	stmt : WHILE . LPAREN expr RPAREN stmt  (36)

	LPAREN  shift 71
	.  error


state 48
	expr : SUPER . LPAREN args_opt RPAREN  (64)

	LPAREN  shift 72
	.  error


state 49
	expr : THIS . DOT ID  (65)
	expr : THIS . DOT ID ASSIGN expr  (66)
	expr : THIS . DOT ID LPAREN args_opt RPAREN  (67)

	DOT  shift 73
	.  error


state 50
	expr : NEW . ID LPAREN args_opt RPAREN  (63)

	ID  shift 74
	.  error


state 51
	expr : LITERAL .  (40)

	.  reduce 40


state 52
	expr : BLIT .  (42)

	.  reduce 42


state 53
	typ : ID .  (20)
	expr : ID .  (44)
	expr : ID . ASSIGN expr  (59)
	expr : ID . LPAREN args_opt RPAREN  (60)
	expr : ID . DOT ID LPAREN args_opt RPAREN  (61)
	expr : ID . DOT ID  (62)

	LPAREN  shift 75
	ASSIGN  shift 76
	DOT  shift 77
	SEMI  reduce 44
	PLUS  reduce 44
	MINUS  reduce 44
	TIMES  reduce 44
	DIVIDE  reduce 44
	EQ  reduce 44
	NEQ  reduce 44
	LT  reduce 44
	LEQ  reduce 44
	GT  reduce 44
	GEQ  reduce 44
	AND  reduce 44
	OR  reduce 44
	ID  reduce 20


state 54
	expr : FLIT .  (41)

	.  reduce 41


state 55
	expr : SLIT .  (43)

	.  reduce 43


state 56
	vdecl : typ . ID SEMI  (23)

	ID  shift 78
	.  error


state 57
	mdecl : invert typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list . RBRACE  (8)
	stmt_list : stmt_list . stmt  (28)

	SEMI  shift 39
	LPAREN  shift 40
	LBRACE  shift 41
	RBRACE  shift 79
	MINUS  shift 42
	NOT  shift 43
	RETURN  shift 44
	IF  shift 45
	FOR  shift 46
	WHILE  shift 47
	SUPER  shift 48
	THIS  shift 49
	NEW  shift 50
	LITERAL  shift 51
	BLIT  shift 52
	ID  shift 62
	FLIT  shift 54
	SLIT  shift 55
	.  error

	stmt  goto 80
	expr  goto 60
	empty_statement  goto 61


state 58
	vdecl_list : vdecl_list vdecl .  (22)

	.  reduce 22


state 59
	stmt_list : stmt .  (27)

	.  reduce 27


state 60
	stmt : expr . SEMI  (29)
	expr : expr . PLUS expr  (45)
	expr : expr . MINUS expr  (46)
	expr : expr . TIMES expr  (47)
	expr : expr . DIVIDE expr  (48)
	expr : expr . EQ expr  (49)
	expr : expr . NEQ expr  (50)
	expr : expr . LT expr  (51)
	expr : expr . LEQ expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GEQ expr  (54)
	expr : expr . AND expr  (55)
	expr : expr . OR expr  (56)

	SEMI  shift 81
	PLUS  shift 82
	MINUS  shift 83
	TIMES  shift 84
	DIVIDE  shift 85
	EQ  shift 86
	NEQ  shift 87
	LT  shift 88
	LEQ  shift 89
	GT  shift 90
	GEQ  shift 91
	AND  shift 92
	OR  shift 93
	.  error


state 61
	stmt : empty_statement .  (31)

	.  reduce 31


state 62
	expr : ID .  (44)
	expr : ID . ASSIGN expr  (59)
	expr : ID . LPAREN args_opt RPAREN  (60)
	expr : ID . DOT ID LPAREN args_opt RPAREN  (61)
	expr : ID . DOT ID  (62)

	LPAREN  shift 75
	ASSIGN  shift 76
	DOT  shift 77
	SEMI  reduce 44
	RPAREN  reduce 44
	COMMA  reduce 44
	PLUS  reduce 44
	MINUS  reduce 44
	TIMES  reduce 44
	DIVIDE  reduce 44
	EQ  reduce 44
	NEQ  reduce 44
	LT  reduce 44
	LEQ  reduce 44
	GT  reduce 44
	GEQ  reduce 44
	AND  reduce 44
	OR  reduce 44


state 63
	expr : expr . PLUS expr  (45)
	expr : expr . MINUS expr  (46)
	expr : expr . TIMES expr  (47)
	expr : expr . DIVIDE expr  (48)
	expr : expr . EQ expr  (49)
	expr : expr . NEQ expr  (50)
	expr : expr . LT expr  (51)
	expr : expr . LEQ expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GEQ expr  (54)
	expr : expr . AND expr  (55)
	expr : expr . OR expr  (56)
	expr : LPAREN expr . RPAREN  (68)

	RPAREN  shift 94
	PLUS  shift 82
	MINUS  shift 83
	TIMES  shift 84
	DIVIDE  shift 85
	EQ  shift 86
	NEQ  shift 87
	LT  shift 88
	LEQ  shift 89
	GT  shift 90
	GEQ  shift 91
	AND  shift 92
	OR  shift 93
	.  error


state 64
	stmt_list : stmt_list . stmt  (28)
	stmt : LBRACE stmt_list . RBRACE  (32)

	SEMI  shift 39
	LPAREN  shift 40
	LBRACE  shift 41
	RBRACE  shift 95
	MINUS  shift 42
	NOT  shift 43
	RETURN  shift 44
	IF  shift 45
	FOR  shift 46
	WHILE  shift 47
	SUPER  shift 48
	THIS  shift 49
	NEW  shift 50
	LITERAL  shift 51
	BLIT  shift 52
	ID  shift 62
	FLIT  shift 54
	SLIT  shift 55
	.  error

	stmt  goto 80
	expr  goto 60
	empty_statement  goto 61


state 65
	expr : expr . PLUS expr  (45)
	expr : expr . MINUS expr  (46)
	expr : expr . TIMES expr  (47)
	expr : expr . DIVIDE expr  (48)
	expr : expr . EQ expr  (49)
	expr : expr . NEQ expr  (50)
	expr : expr . LT expr  (51)
	expr : expr . LEQ expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GEQ expr  (54)
	expr : expr . AND expr  (55)
	expr : expr . OR expr  (56)
	expr : MINUS expr .  (57)

	.  reduce 57


state 66
	expr : expr . PLUS expr  (45)
	expr : expr . MINUS expr  (46)
	expr : expr . TIMES expr  (47)
	expr : expr . DIVIDE expr  (48)
	expr : expr . EQ expr  (49)
	expr : expr . NEQ expr  (50)
	expr : expr . LT expr  (51)
	expr : expr . LEQ expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GEQ expr  (54)
	expr : expr . AND expr  (55)
	expr : expr . OR expr  (56)
	expr : NOT expr .  (58)

	.  reduce 58


state 67
	expr_opt : expr .  (39)
	expr : expr . PLUS expr  (45)
	expr : expr . MINUS expr  (46)
	expr : expr . TIMES expr  (47)
	expr : expr . DIVIDE expr  (48)
	expr : expr . EQ expr  (49)
	expr : expr . NEQ expr  (50)
	expr : expr . LT expr  (51)
	expr : expr . LEQ expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GEQ expr  (54)
	expr : expr . AND expr  (55)
	expr : expr . OR expr  (56)

	PLUS  shift 82
	MINUS  shift 83
	TIMES  shift 84
	DIVIDE  shift 85
	EQ  shift 86
	NEQ  shift 87
	LT  shift 88
	LEQ  shift 89
	GT  shift 90
	GEQ  shift 91
	AND  shift 92
	OR  shift 93
	SEMI  reduce 39
	RPAREN  reduce 39


state 68
	stmt : RETURN expr_opt . SEMI  (30)

	SEMI  shift 96
	.  error


state 69
	stmt : IF LPAREN . expr RPAREN stmt  (33)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (34)

	LPAREN  shift 40
	MINUS  shift 42
	NOT  shift 43
	SUPER  shift 48
	THIS  shift 49
	NEW  shift 50
	LITERAL  shift 51
	BLIT  shift 52
	ID  shift 62
	FLIT  shift 54
	SLIT  shift 55
	.  error

	expr  goto 97


state 70
	stmt : FOR LPAREN . expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (35)
	expr_opt : .  (38)

	LPAREN  shift 40
	MINUS  shift 42
	NOT  shift 43
	SUPER  shift 48
	THIS  shift 49
	NEW  shift 50
	LITERAL  shift 51
	BLIT  shift 52
	ID  shift 62
	FLIT  shift 54
	SLIT  shift 55
	SEMI  reduce 38

	expr  goto 67
	expr_opt  goto 98


state 71
	stmt : WHILE LPAREN . expr RPAREN stmt  (36)

	LPAREN  shift 40
	MINUS  shift 42
	NOT  shift 43
	SUPER  shift 48
	THIS  shift 49
	NEW  shift 50
	LITERAL  shift 51
	BLIT  shift 52
	ID  shift 62
	FLIT  shift 54
	SLIT  shift 55
	.  error

	expr  goto 99


state 72
	expr : SUPER LPAREN . args_opt RPAREN  (64)
	args_opt : .  (69)

	LPAREN  shift 40
	MINUS  shift 42
	NOT  shift 43
	SUPER  shift 48
	THIS  shift 49
	NEW  shift 50
	LITERAL  shift 51
	BLIT  shift 52
	ID  shift 62
	FLIT  shift 54
	SLIT  shift 55
	RPAREN  reduce 69

	expr  goto 100
	args_opt  goto 101
	args_list  goto 102


state 73
	expr : THIS DOT . ID  (65)
	expr : THIS DOT . ID ASSIGN expr  (66)
	expr : THIS DOT . ID LPAREN args_opt RPAREN  (67)

	ID  shift 103
	.  error


state 74
	expr : NEW ID . LPAREN args_opt RPAREN  (63)

	LPAREN  shift 104
	.  error


state 75
	expr : ID LPAREN . args_opt RPAREN  (60)
	args_opt : .  (69)

	LPAREN  shift 40
	MINUS  shift 42
	NOT  shift 43
	SUPER  shift 48
	THIS  shift 49
	NEW  shift 50
	LITERAL  shift 51
	BLIT  shift 52
	ID  shift 62
	FLIT  shift 54
	SLIT  shift 55
	RPAREN  reduce 69

	expr  goto 100
	args_opt  goto 105
	args_list  goto 102


state 76
	expr : ID ASSIGN . expr  (59)

	LPAREN  shift 40
	MINUS  shift 42
	NOT  shift 43
	SUPER  shift 48
	THIS  shift 49
	NEW  shift 50
	LITERAL  shift 51
	BLIT  shift 52
	ID  shift 62
	FLIT  shift 54
	SLIT  shift 55
	.  error

	expr  goto 106


state 77
	expr : ID DOT . ID LPAREN args_opt RPAREN  (61)
	expr : ID DOT . ID  (62)

	ID  shift 107
	.  error


state 78
	vdecl : typ ID . SEMI  (23)

	SEMI  shift 108
	.  error


state 79
	mdecl : invert typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE .  (8)

	.  reduce 8


state 80
	stmt_list : stmt_list stmt .  (28)

	.  reduce 28


state 81
	stmt : expr SEMI .  (29)

	.  reduce 29


state 82
	expr : expr PLUS . expr  (45)

	LPAREN  shift 40
	MINUS  shift 42
	NOT  shift 43
	SUPER  shift 48
	THIS  shift 49
	NEW  shift 50
	LITERAL  shift 51
	BLIT  shift 52
	ID  shift 62
	FLIT  shift 54
	SLIT  shift 55
	.  error

	expr  goto 109


state 83
	expr : expr MINUS . expr  (46)

	LPAREN  shift 40
	MINUS  shift 42
	NOT  shift 43
	SUPER  shift 48
	THIS  shift 49
	NEW  shift 50
	LITERAL  shift 51
	BLIT  shift 52
	ID  shift 62
	FLIT  shift 54
	SLIT  shift 55
	.  error

	expr  goto 110


state 84
	expr : expr TIMES . expr  (47)

	LPAREN  shift 40
	MINUS  shift 42
	NOT  shift 43
	SUPER  shift 48
	THIS  shift 49
	NEW  shift 50
	LITERAL  shift 51
	BLIT  shift 52
	ID  shift 62
	FLIT  shift 54
	SLIT  shift 55
	.  error

	expr  goto 111


state 85
	expr : expr DIVIDE . expr  (48)

	LPAREN  shift 40
	MINUS  shift 42
	NOT  shift 43
	SUPER  shift 48
	THIS  shift 49
	NEW  shift 50
	LITERAL  shift 51
	BLIT  shift 52
	ID  shift 62
	FLIT  shift 54
	SLIT  shift 55
	.  error

	expr  goto 112


state 86
	expr : expr EQ . expr  (49)

	LPAREN  shift 40
	MINUS  shift 42
	NOT  shift 43
	SUPER  shift 48
	THIS  shift 49
	NEW  shift 50
	LITERAL  shift 51
	BLIT  shift 52
	ID  shift 62
	FLIT  shift 54
	SLIT  shift 55
	.  error

	expr  goto 113


state 87
	expr : expr NEQ . expr  (50)

	LPAREN  shift 40
	MINUS  shift 42
	NOT  shift 43
	SUPER  shift 48
	THIS  shift 49
	NEW  shift 50
	LITERAL  shift 51
	BLIT  shift 52
	ID  shift 62
	FLIT  shift 54
	SLIT  shift 55
	.  error

	expr  goto 114


state 88
	expr : expr LT . expr  (51)

	LPAREN  shift 40
	MINUS  shift 42
	NOT  shift 43
	SUPER  shift 48
	THIS  shift 49
	NEW  shift 50
	LITERAL  shift 51
	BLIT  shift 52
	ID  shift 62
	FLIT  shift 54
	SLIT  shift 55
	.  error

	expr  goto 115


state 89
	expr : expr LEQ . expr  (52)

	LPAREN  shift 40
	MINUS  shift 42
	NOT  shift 43
	SUPER  shift 48
	THIS  shift 49
	NEW  shift 50
	LITERAL  shift 51
	BLIT  shift 52
	ID  shift 62
	FLIT  shift 54
	SLIT  shift 55
	.  error

	expr  goto 116


state 90
	expr : expr GT . expr  (53)

	LPAREN  shift 40
	MINUS  shift 42
	NOT  shift 43
	SUPER  shift 48
	THIS  shift 49
	NEW  shift 50
	LITERAL  shift 51
	BLIT  shift 52
	ID  shift 62
	FLIT  shift 54
	SLIT  shift 55
	.  error

	expr  goto 117


state 91
	expr : expr GEQ . expr  (54)

	LPAREN  shift 40
	MINUS  shift 42
	NOT  shift 43
	SUPER  shift 48
	THIS  shift 49
	NEW  shift 50
	LITERAL  shift 51
	BLIT  shift 52
	ID  shift 62
	FLIT  shift 54
	SLIT  shift 55
	.  error

	expr  goto 118


state 92
	expr : expr AND . expr  (55)

	LPAREN  shift 40
	MINUS  shift 42
	NOT  shift 43
	SUPER  shift 48
	THIS  shift 49
	NEW  shift 50
	LITERAL  shift 51
	BLIT  shift 52
	ID  shift 62
	FLIT  shift 54
	SLIT  shift 55
	.  error

	expr  goto 119


state 93
	expr : expr OR . expr  (56)

	LPAREN  shift 40
	MINUS  shift 42
	NOT  shift 43
	SUPER  shift 48
	THIS  shift 49
	NEW  shift 50
	LITERAL  shift 51
	BLIT  shift 52
	ID  shift 62
	FLIT  shift 54
	SLIT  shift 55
	.  error

	expr  goto 120


state 94
	expr : LPAREN expr RPAREN .  (68)

	.  reduce 68


state 95
	stmt : LBRACE stmt_list RBRACE .  (32)

	.  reduce 32


state 96
	stmt : RETURN expr_opt SEMI .  (30)

	.  reduce 30


state 97
	stmt : IF LPAREN expr . RPAREN stmt  (33)
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (34)
	expr : expr . PLUS expr  (45)
	expr : expr . MINUS expr  (46)
	expr : expr . TIMES expr  (47)
	expr : expr . DIVIDE expr  (48)
	expr : expr . EQ expr  (49)
	expr : expr . NEQ expr  (50)
	expr : expr . LT expr  (51)
	expr : expr . LEQ expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GEQ expr  (54)
	expr : expr . AND expr  (55)
	expr : expr . OR expr  (56)

	RPAREN  shift 121
	PLUS  shift 82
	MINUS  shift 83
	TIMES  shift 84
	DIVIDE  shift 85
	EQ  shift 86
	NEQ  shift 87
	LT  shift 88
	LEQ  shift 89
	GT  shift 90
	GEQ  shift 91
	AND  shift 92
	OR  shift 93
	.  error


state 98
	stmt : FOR LPAREN expr_opt . SEMI expr SEMI expr_opt RPAREN stmt  (35)

	SEMI  shift 122
	.  error


state 99
	stmt : WHILE LPAREN expr . RPAREN stmt  (36)
	expr : expr . PLUS expr  (45)
	expr : expr . MINUS expr  (46)
	expr : expr . TIMES expr  (47)
	expr : expr . DIVIDE expr  (48)
	expr : expr . EQ expr  (49)
	expr : expr . NEQ expr  (50)
	expr : expr . LT expr  (51)
	expr : expr . LEQ expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GEQ expr  (54)
	expr : expr . AND expr  (55)
	expr : expr . OR expr  (56)

	RPAREN  shift 123
	PLUS  shift 82
	MINUS  shift 83
	TIMES  shift 84
	DIVIDE  shift 85
	EQ  shift 86
	NEQ  shift 87
	LT  shift 88
	LEQ  shift 89
	GT  shift 90
	GEQ  shift 91
	AND  shift 92
	OR  shift 93
	.  error


state 100
	expr : expr . PLUS expr  (45)
	expr : expr . MINUS expr  (46)
	expr : expr . TIMES expr  (47)
	expr : expr . DIVIDE expr  (48)
	expr : expr . EQ expr  (49)
	expr : expr . NEQ expr  (50)
	expr : expr . LT expr  (51)
	expr : expr . LEQ expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GEQ expr  (54)
	expr : expr . AND expr  (55)
	expr : expr . OR expr  (56)
	args_list : expr .  (71)

	PLUS  shift 82
	MINUS  shift 83
	TIMES  shift 84
	DIVIDE  shift 85
	EQ  shift 86
	NEQ  shift 87
	LT  shift 88
	LEQ  shift 89
	GT  shift 90
	GEQ  shift 91
	AND  shift 92
	OR  shift 93
	RPAREN  reduce 71
	COMMA  reduce 71


state 101
	expr : SUPER LPAREN args_opt . RPAREN  (64)

	RPAREN  shift 124
	.  error


state 102
	args_opt : args_list .  (70)
	args_list : args_list . COMMA expr  (72)

	COMMA  shift 125
	RPAREN  reduce 70


state 103
	expr : THIS DOT ID .  (65)
	expr : THIS DOT ID . ASSIGN expr  (66)
	expr : THIS DOT ID . LPAREN args_opt RPAREN  (67)

	LPAREN  shift 126
	ASSIGN  shift 127
	SEMI  reduce 65
	RPAREN  reduce 65
	COMMA  reduce 65
	PLUS  reduce 65
	MINUS  reduce 65
	TIMES  reduce 65
	DIVIDE  reduce 65
	EQ  reduce 65
	NEQ  reduce 65
	LT  reduce 65
	LEQ  reduce 65
	GT  reduce 65
	GEQ  reduce 65
	AND  reduce 65
	OR  reduce 65


state 104
	expr : NEW ID LPAREN . args_opt RPAREN  (63)
	args_opt : .  (69)

	LPAREN  shift 40
	MINUS  shift 42
	NOT  shift 43
	SUPER  shift 48
	THIS  shift 49
	NEW  shift 50
	LITERAL  shift 51
	BLIT  shift 52
	ID  shift 62
	FLIT  shift 54
	SLIT  shift 55
	RPAREN  reduce 69

	expr  goto 100
	args_opt  goto 128
	args_list  goto 102


state 105
	expr : ID LPAREN args_opt . RPAREN  (60)

	RPAREN  shift 129
	.  error


state 106
	expr : expr . PLUS expr  (45)
	expr : expr . MINUS expr  (46)
	expr : expr . TIMES expr  (47)
	expr : expr . DIVIDE expr  (48)
	expr : expr . EQ expr  (49)
	expr : expr . NEQ expr  (50)
	expr : expr . LT expr  (51)
	expr : expr . LEQ expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GEQ expr  (54)
	expr : expr . AND expr  (55)
	expr : expr . OR expr  (56)
	expr : ID ASSIGN expr .  (59)

	PLUS  shift 82
	MINUS  shift 83
	TIMES  shift 84
	DIVIDE  shift 85
	EQ  shift 86
	NEQ  shift 87
	LT  shift 88
	LEQ  shift 89
	GT  shift 90
	GEQ  shift 91
	AND  shift 92
	OR  shift 93
	SEMI  reduce 59
	RPAREN  reduce 59
	COMMA  reduce 59


state 107
	expr : ID DOT ID . LPAREN args_opt RPAREN  (61)
	expr : ID DOT ID .  (62)

	LPAREN  shift 130
	SEMI  reduce 62
	RPAREN  reduce 62
	COMMA  reduce 62
	PLUS  reduce 62
	MINUS  reduce 62
	TIMES  reduce 62
	DIVIDE  reduce 62
	EQ  reduce 62
	NEQ  reduce 62
	LT  reduce 62
	LEQ  reduce 62
	GT  reduce 62
	GEQ  reduce 62
	AND  reduce 62
	OR  reduce 62


state 108
	vdecl : typ ID SEMI .  (23)

	.  reduce 23


state 109
	expr : expr . PLUS expr  (45)
	expr : expr PLUS expr .  (45)
	expr : expr . MINUS expr  (46)
	expr : expr . TIMES expr  (47)
	expr : expr . DIVIDE expr  (48)
	expr : expr . EQ expr  (49)
	expr : expr . NEQ expr  (50)
	expr : expr . LT expr  (51)
	expr : expr . LEQ expr  (52)
	expr : expr . GT expr  (53)
	expr : expr . GEQ expr  (54)
	expr : expr . AND expr  (55)
	expr : expr . OR expr  (56)
